fix: improve payment method label spacing

--- a/assets/css/monei-blocks-checkout.css
+++ b/assets/css/monei-blocks-checkout.css
@@ -70,7 +70,6 @@
 .monei-label-container {
     display: flex;
     align-items: center;
-    gap: 0.5em;
 }
 
 .monei-text {
@@ -83,6 +82,7 @@
     align-items: center;
     gap: 0.3125em;
     flex-wrap: wrap;
+    margin-left: 0.5em;
 }
 
 .monei-card-brands img,
@@ -153,7 +153,8 @@
     }
 
     .monei-card-brands {
-        margin-left: auto;
+        margin-left: 0;
+        margin-top: 0.5em;
     }
 
     .monei-label-container {
